# backtesterrb30

./: .buildinfo  .gitattributes  .gitignore  README.md  backtesterRB30.html  backtesterRB30.python_engine.html  backtesterRB30.python_executor.html  backtesterrb30.html  backtesterrb30.python_engine.html  backtesterrb30.python_executor.html  basic_example.py  docker-compose.yml  genindex.html  get_binance_avaliable_instruments.py  index.html  install_dependencies_locally.sh  install_node.sh  modules.html  objects.inv  pyproject.toml  reinstall_package.sh  requirements.txt  run.sh  run_all.py  search.html  searchindex.js  serve.py  setup.py  test.py
.github/workflows/: lint.yml  main.yml  pages.yml  python-publish.yml
_sources/: backtesterRB30.rst.txt  backtesterrb30.python_engine.rst.txt  backtesterrb30.rst.txt  index.rst.txt
backtesterRB30/: __init__.py
backtesterRB30/historical_data_feeds/: functions.py  historical_data_feeds.py  historical_downloader.py  requirements.txt  run.py
backtesterRB30/historical_data_feeds/data_sources/: data_source_base.py  data_sources_list.py
backtesterRB30/historical_data_feeds/modules/: binance.py  coingecko.py  data_source_base.py  dukascopy.py  exante.py  rb30_disk.py
backtesterRB30/libs/asyncio_broker/: asyncio_broker.py
backtesterRB30/libs/communication_broker/: asyncio_broker.py  broker_base.py  zmq.py  zmq_broker.py
backtesterRB30/libs/data_sources/: data_source_base.py  data_sources_list.py
backtesterRB30/libs/utils/: config_validator.py  data_imports.py  executor_imports.py  historical_sources.py  json_serializable.py  model_imports.py  module_loaders.py  run_all.py  run_service.py  service.py  strategy.py
backtesterRB30/libs/xnt/: README.md  http_api.py
backtesterRB30/libs/zmq/: zmq.py
backtesterRB30/live_data_feeds/: live_data_feeds.py  run.py
backtesterRB30/python_backtester/: python_backtester.py  run.py
backtesterRB30/python_engine/: engine.py  run.py
backtesterRB30/python_executor/: run.py  trade_executor.py
backtesterRB3090/: __init__.py
backtesterRB3090/historical_data_feeds/: historical_downloader.py
backtesterRB3090/libs/data_sources/: utils.py
backtesterRB3090/libs/utils/: config_validator.py  historical_sources.py  singleton.py
backtesterRB3090/python_engine/: Dockerfile
backtesterrb30/: __init__.py  temporary_ducascopy_list.json
backtesterrb30/historical_data_feeds/: functions.py  historical_data_feeds.py  historical_downloader.py  run.py
backtesterrb30/historical_data_feeds/tests/: test_historical_data_feeds.py
backtesterrb30/libs/communication_broker/: asyncio_broker.py  broker_base.py  zmq.py  zmq_broker.py
backtesterrb30/libs/data_sources/: data_source_base.py  data_sources_list.py  utils.py
backtesterrb30/libs/utils/: config_validator.py  executor_imports.py  hash.py  historical_sources.py  json_serializable.py  list_of_services.py  module_loaders.py  run_all.py  run_service.py  service.py  singleton.py  strategy.py  timestamps.py  (+1 more)
backtesterrb30/live_data_feeds/: live_data_feeds.py  run.py
backtesterrb30/python_backtester/: python_backtester.py  run.py
backtesterrb30/python_engine/: engine.py  run.py
backtesterrb30/python_executor/: run.py  trade_executor.py
data_historical_downloaded/: binance__BTCUSDT__hour__1590962400000__1609369200000.csv  binance__BTCUSDT__hour__1609455600000__1640905200000.csv  binance__BTCUSDT__hour__1640991600000__1654034400000.csv  binance__ETHUSDT__hour__1590962400000__1609369200000.csv  binance__ETHUSDT__hour__1609455600000__1640905200000.csv  binance__ETHUSDT__hour__1640991600000__1654034400000.csv
docs/: backtesterRB30.python_engine.html  backtesterRB30.python_executor.rst  conf.py  index.html  objects.inv  searchindex.js
docs/_sources/: modules.rst.txt
docs_build/: backtesterRB30.python_executor.html
docs_build/_sources/: backtesterRB30.python_engine.rst.txt
docs_config/: backtesterrb30.python_executor.rst  modules.rst
examples/basic_example/: basic_example.py  data_schema.py  executor.py  model.py
examples/live_reloading_example/: data_schema.py  executor.py  live_reloading_strategy.py  model.py  test_asyncio_broker_live_reloading.py
examples/one_file_strategy/: one_file_strategy.py
historical_data_feeds/: Dockerfile  historical_data_feeds.py  run.py
historical_data_feeds/modules/: binance.py  coingecko.py  data_source_base.py  dukascopy.py  exante.py  rb30_disk.py  utils.py
historical_data_feeds/tests/: test_historical_data_feeds.py
libs/data_feeds/: data_feeds.py
libs/interfaces/: config.py
libs/list_of_services/: list_of_services.py
libs/necessery_imports/: data_imports.py  executor_imports.py  necessery_imports.py
libs/utils/: config_validator.py  data_imports.py  historical_sources.py  model_imports.py  run_service.py  timestamps.py
libs/zmq/: config_schema.py  service.py  zmq.py
live_data_feeds/: Dockerfile  run.py
models/: test_model_v2.h5
notebooks/: recognition.ipynb  testing.ipynb  testing3dimension.ipynb
python_backtester/: Dockerfile  python_backtester.py  requirements.txt  run.py
python_engine/: Dockerfile  engine.py  requirements.txt  run.py
python_executor/: Dockerfile  requirements.txt  run.py  trade_executor.py
strategies/: setup.py
strategies/4_EMA/: data_schema.py  executor.py  model.py
strategies/exante_tests/: data_schema.py  model.py
strategies/hackaton1/: data_schema.py  executor.py  model.py  strategy.py
strategies/hackaton1_ticks/: data_schema.py  model.py
strategies/tick_download_tests/: data_schema.py  executor.py  model.py
(+95 files in other folders)
