[build-system]
requires = ["poetry-core >= 1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "backtesterRB30"
version = "0.1.4"
description = "Backtesting and data loading engine"
license = "Unlicense"
authors = [
    "pazerny kormoran",
]
readme = "README.md"
repository = "https://github.com/threeal/python-starter"
keywords = ["backtesting", "market", "finance", "trading"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "1.10.2"
numpy = "1.23.3"
asyncio = "3.4.3"
pyzmq = "24.0.1"
python-binance = "1.0.16"
pandas = "1.5.0"
matplotlib = "3.6.0"
python-dotenv = "0.21.0"
keyboard = "0.13.5"
pycoingecko = "3.1.0"
websocket-client = "~0.57.0"
backoff = "2.2.1"
jwt = "1.3.1"
deepdiff = "4.0.5"
inflection = "0.3.1"
appdirs = "1.4.4"
requests = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
poethepoet = "^0.29.0"
pytest-cov = "^5.0.0"
pydoctor = "^24.3.3"
ruff = "^0.6.8"

[tool.poetry.scripts]
strategy1 = "basic_example:main"

[tool.poe.tasks]
docs = "pydoctor --make-html backtesterRB30"
format = "ruff format backtesterRB30 tests"
lint = "ruff check backtesterRB30 tests"
test = "pytest -v --cov=my_fibonacci"

[tool.coverage.report]
fail_under = 100
omit = ["__main__.py"]

[tool.ruff.lint]
extend-select = ["E", "W", "C90", "I", "N", "D", "UP", "ANN", "S", "B", "A", "C4", "ICN", "INP", "PIE", "PT", "Q", "RET", "SIM", "TCH", "ARG", "ERA", "PL", "PERF"]
ignore = ["D211", "D212"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]
